--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LES-1</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>eBusiness</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -19,55 +19,132 @@
     ></script>
   </head>
   <body>
-    <!--  Header  -->
-    <header class="header fixed-top d-flex align-items-center">
-      <div class="container d-flex justify-content-between">
-        <div class="logo">
-          <h1>
-            <a href="index.html"><span>e</span>Business</a>
-          </h1>
-        </div>
-
-        <nav class="navbar">
-          <ul>
-            <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-            <li><a class="nav-link scrollto" href="#about">About</a></li>
-            <li><a class="nav-link scrollto" href="#services">Services</a></li>
-            <li>
-              <a class="nav-link scrollto" href="#portfolio">Portfolio</a>
-            </li>
-            <li><a class="nav-link scrollto" href="#team">Team</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li class="dropdown">
-              <a href="#"
-                ><span>Drop Down</span> <i class="bi bi-chevron-down"></i
-              ></a>
-              <ul>
-                <li><a href="#">Drop Down 1</a></li>
-                <li class="dropdown">
-                  <a href="#"
-                    ><span>Deep Drop Down</span>
-                    <i class="bi bi-chevron-right"></i
-                  ></a>
-                  <ul>
-                    <li><a href="#">Deep Drop Down 1</a></li>
-                    <li><a href="#">Deep Drop Down 2</a></li>
-                    <li><a href="#">Deep Drop Down 3</a></li>
-                    <li><a href="#">Deep Drop Down 4</a></li>
-                    <li><a href="#">Deep Drop Down 5</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Drop Down 2</a></li>
-                <li><a href="#">Drop Down 3</a></li>
-                <li><a href="#">Drop Down 4</a></li>
-              </ul>
-            </li>
-            <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          </ul>
-          <i class="bi bi-list mobile-nav-toggle"></i>
-        </nav>
-      </div>
+    <!-- Header -->
+    <header class="bg-primary text-white text-center p-5">
+      <h1>eBusiness</h1>
+      <p>
+        Temporibus autem quibusdam et aut officiis debitis aut rerum
+        necessitatibus.
+      </p>
     </header>
-    <!-- End Header -->
+
+    <!-- About Section -->
+    <section class="container my-5">
+      <div class="row">
+        <div class="col">
+          <h2>About eBusiness</h2>
+          <p>Information about eBusiness...</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Services Section -->
+    <section class="container my-5">
+      <div class="row">
+        <div class="col">
+          <h3>Service 1</h3>
+          <p>Description of service 1...</p>
+        </div>
+        <div class="col">
+          <h3>Service 2</h3>
+          <p>Description of service 2...</p>
+        </div>
+        <div class="col">
+          <h3>Service 3</h3>
+          <p>Description of service 3...</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Team Section -->
+    <section class="container my-5">
+      <div class="row">
+        <div class="col">
+          <h3>Team Member 1</h3>
+          <p>Details about team member 1...</p>
+        </div>
+        <div class="col">
+          <h3>Team Member 2</h3>
+          <p>Details about team member 2...</p>
+        </div>
+        <div class="col">
+          <h3>Team Member 3</h3>
+          <p>Details about team member 3...</p>
+        </div>
+        <div class="col">
+          <h3>Team Member 4</h3>
+          <p>Details about team member 4...</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Portfolio Section -->
+    <section class="container my-5">
+      <div class="row">
+        <div class="col">
+          <h3>Portfolio Item 1</h3>
+          <p>Description of portfolio item 1...</p>
+        </div>
+        <div class="col">
+          <h3>Portfolio Item 2</h3>
+          <p>Description of portfolio item 2...</p>
+        </div>
+        <div class="col">
+          <h3>Portfolio Item 3</h3>
+          <p>Description of portfolio item 3...</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Pricing Section -->
+    <section class="container my-5">
+      <div class="row">
+        <div class="col">
+          <h3>Basic Plan</h3>
+          <p>Details about the basic plan...</p>
+        </div>
+        <div class="col">
+          <h3>Standard Plan</h3>
+          <p>Details about the standard plan...</p>
+        </div>
+        <div class="col">
+          <h3>Premium Plan</h3>
+          <p>Details about the premium plan...</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- News Section -->
+    <section class="container my-5">
+      <div class="row">
+        <div class="col">
+          <h3>News Article 1</h3>
+          <p>Summary of news article 1...</p>
+        </div>
+        <div class="col">
+          <h3>News Article 2</h3>
+          <p>Summary of news article 2...</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="container my-5">
+      <div class="row">
+        <div class="col">
+          <h3>Contact Us</h3>
+          <!-- Contact form here -->
+        </div>
+        <div class="col">
+          <h3>Map Location</h3>
+          <!-- Map here -->
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center p-3">
+      <p>&copy; 2024 eBusiness. All Rights Reserved.</p>
+    </footer>
   </body>
 </html>
