--- a/index.html
+++ b/index.html
@@ -1,150 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>eBusiness</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <script
-      defer
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <!-- Header -->
-    <header class="bg-primary text-white text-center p-5">
-      <h1>eBusiness</h1>
-      <p>
-        Temporibus autem quibusdam et aut officiis debitis aut rerum
-        necessitatibus.
-      </p>
-    </header>
 
-    <!-- About Section -->
-    <section class="container my-5">
-      <div class="row">
-        <div class="col">
-          <h2>About eBusiness</h2>
-          <p>Information about eBusiness...</p>
-        </div>
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>eBusiness Bootstrap </title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+
+
+</head>
+
+<body>
+
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top d-flex align-items-center">
+    <div class="container d-flex justify-content-between">
+
+      <div class="logo">
+        <h1><a href="index.html"><span>e</span>Business</a></h1>
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
-    </section>
 
-    <!-- Services Section -->
-    <section class="container my-5">
-      <div class="row">
-        <div class="col">
-          <h3>Service 1</h3>
-          <p>Description of service 1...</p>
-        </div>
-        <div class="col">
-          <h3>Service 2</h3>
-          <p>Description of service 2...</p>
-        </div>
-        <div class="col">
-          <h3>Service 3</h3>
-          <p>Description of service 3...</p>
-        </div>
-      </div>
-    </section>
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto" href="#services">Services</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="#">Drop Down 1</a></li>
+              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a href="#">Deep Drop Down 1</a></li>
+                  <li><a href="#">Deep Drop Down 2</a></li>
+                  <li><a href="#">Deep Drop Down 3</a></li>
+                  <li><a href="#">Deep Drop Down 4</a></li>
+                  <li><a href="#">Deep Drop Down 5</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Drop Down 2</a></li>
+              <li><a href="#">Drop Down 3</a></li>
+              <li><a href="#">Drop Down 4</a></li>
+            </ul>
+          </li>
+          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
 
-    <!-- Team Section -->
-    <section class="container my-5">
-      <div class="row">
-        <div class="col">
-          <h3>Team Member 1</h3>
-          <p>Details about team member 1...</p>
-        </div>
-        <div class="col">
-          <h3>Team Member 2</h3>
-          <p>Details about team member 2...</p>
-        </div>
-        <div class="col">
-          <h3>Team Member 3</h3>
-          <p>Details about team member 3...</p>
-        </div>
-        <div class="col">
-          <h3>Team Member 4</h3>
-          <p>Details about team member 4...</p>
-        </div>
-      </div>
-    </section>
+    </div>
+  </header><!-- End Header -->
 
-    <!-- Portfolio Section -->
-    <section class="container my-5">
-      <div class="row">
-        <div class="col">
-          <h3>Portfolio Item 1</h3>
-          <p>Description of portfolio item 1...</p>
-        </div>
-        <div class="col">
-          <h3>Portfolio Item 2</h3>
-          <p>Description of portfolio item 2...</p>
-        </div>
-        <div class="col">
-          <h3>Portfolio Item 3</h3>
-          <p>Description of portfolio item 3...</p>
-        </div>
-      </div>
-    </section>
+  
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
 
-    <!-- Pricing Section -->
-    <section class="container my-5">
-      <div class="row">
-        <div class="col">
-          <h3>Basic Plan</h3>
-          <p>Details about the basic plan...</p>
-        </div>
-        <div class="col">
-          <h3>Standard Plan</h3>
-          <p>Details about the standard plan...</p>
-        </div>
-        <div class="col">
-          <h3>Premium Plan</h3>
-          <p>Details about the premium plan...</p>
-        </div>
-      </div>
-    </section>
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
 
-    <!-- News Section -->
-    <section class="container my-5">
-      <div class="row">
-        <div class="col">
-          <h3>News Article 1</h3>
-          <p>Summary of news article 1...</p>
-        </div>
-        <div class="col">
-          <h3>News Article 2</h3>
-          <p>Summary of news article 2...</p>
-        </div>
-      </div>
-    </section>
+</body>
 
-    <!-- Contact Section -->
-    <section class="container my-5">
-      <div class="row">
-        <div class="col">
-          <h3>Contact Us</h3>
-          <!-- Contact form here -->
-        </div>
-        <div class="col">
-          <h3>Map Location</h3>
-          <!-- Map here -->
-        </div>
-      </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center p-3">
-      <p>&copy; 2024 eBusiness. All Rights Reserved.</p>
-    </footer>
-  </body>
 </html>
