--- a/index.html
+++ b/index.html
@@ -451,6 +451,22 @@
       </div>
     </div><!-- End Team Section -->
 
+    <!-- ======= Rviews Section ======= -->
+    <div class="reviews-area">
+      <div class="row g-0">
+        <div class="col-lg-6">
+          <img src="assets/img/about/2.jpg" alt="" class="img-fluid">
+        </div>
+        <div class="col-lg-6 work-right-text d-flex align-items-center">
+          <div class="px-5 py-5 py-lg-0">
+            <h2>working with us</h2>
+            <h5>Web Design, Ready Home, Construction and Co-operate Outstanding Buildings.</h5>
+            <a href="#contact" class="ready-btn scrollto">Contact us</a>
+          </div>
+        </div>
+      </div>
+    </div><!-- End Rviews Section -->
+
     
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
